// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeviceQueryClause matches snapshot 1`] = `
<section
  className="search-pill active no-operator"
  key="query-0"
>
  <Dropdown
    aria-label="deviceLists.query.searchPills.clause.parameterType.ariaLabel"
    className="parameter-type"
    onOptionSelect={[Function]}
    placeholder="deviceLists.query.searchPills.clause.parameterType.placeholder"
  >
    <Option
      key="capabilities.iotEdge"
      value="capabilities.iotEdge"
    >
      deviceLists.query.searchPills.clause.parameterType.items.edge
    </Option>
    <Option
      key="status"
      value="status"
    >
      deviceLists.query.searchPills.clause.parameterType.items.status
    </Option>
  </Dropdown>
  <Dropdown
    aria-label="deviceLists.query.searchPills.clause.value.placeholder"
    className="clause-value"
    onOptionSelect={[Function]}
    placeholder="deviceLists.query.searchPills.clause.value.placeholder"
    selectedOptions={
      [
        "enabled",
      ]
    }
  >
    <Option
      key="enabled"
      value="enabled"
    >
      deviceLists.query.searchPills.clause.value.deviceStatus.enabled
    </Option>
    <Option
      key="disabled"
      value="disabled"
    >
      deviceLists.query.searchPills.clause.value.deviceStatus.disabled
    </Option>
  </Dropdown>
  <Button
    appearance="subtle"
    aria-label="deviceLists.query.searchPills.clause.remove.ariaLabel"
    className="remove-pill"
    icon={<DismissCircleRegular />}
    onClick={[Function]}
  />
</section>
`;

exports[`DeviceQueryClause matches snapshot without operation 1`] = `
<section
  className="search-pill active no-operator"
  key="query-0"
>
  <Dropdown
    aria-label="deviceLists.query.searchPills.clause.parameterType.ariaLabel"
    className="parameter-type"
    onOptionSelect={[Function]}
    placeholder="deviceLists.query.searchPills.clause.parameterType.placeholder"
  >
    <Option
      key="capabilities.iotEdge"
      value="capabilities.iotEdge"
    >
      deviceLists.query.searchPills.clause.parameterType.items.edge
    </Option>
    <Option
      key="status"
      value="status"
    >
      deviceLists.query.searchPills.clause.parameterType.items.status
    </Option>
  </Dropdown>
  <Dropdown
    aria-label="deviceLists.query.searchPills.clause.value.placeholder"
    className="clause-value"
    onOptionSelect={[Function]}
    placeholder="deviceLists.query.searchPills.clause.value.placeholder"
    selectedOptions={
      [
        "true",
      ]
    }
  >
    <Option
      key="true"
      value="true"
    >
      deviceLists.query.searchPills.clause.value.deviceCapability.edge
    </Option>
    <Option
      key="false"
      value="false"
    >
      deviceLists.query.searchPills.clause.value.deviceCapability.nonEdge
    </Option>
  </Dropdown>
  <Button
    appearance="subtle"
    aria-label="deviceLists.query.searchPills.clause.remove.ariaLabel"
    className="remove-pill"
    icon={<DismissCircleRegular />}
    onClick={[Function]}
  />
</section>
`;
